# rust-setup-example

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: ci.yml
assets/: node-js  setup
src/: main.rs  runtime.c
